[package]
name = "upder"
version = "0.1.0"
authors = ["winwisely268 <winwisely268@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.1"
failure = "^0.1.8"
ureq = "^1.1.1"

[profile.release]
lto = true