[package]
name = "upder"
version = "0.1.0"
authors = ["winwisely268 <winwisely268@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.31"
clap = "^2.33.1"
indicatif = "^0.14.0"
attohttpc = "^0.13.0"
byteorder = "^1.3.4"

[profile.release]
lto = true
