[package]
name = "upder"
version = "0.1.0"
authors = ["winwisely268 <winwisely268@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.31"
structopt = "0.3"
sys-info = "^0.6.1"

[profile.release]
lto = true
